--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Billing</string>
+    <string name="app_name">Beta</string>
     <string name="privat">Private</string>
     <string name="business">Business</string>
 </resources>
