--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="addnewbill">Add new Bill</string>
     <string name="calculate">Calculate</string>
     <string name="logout">Logout</string>
+    <string name="clickMenu">activity_rob_toolbar</string>
 
     <string name="drawerMenu">Billing Manager</string>
 
