add new navi remove bill

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="AllBillsPng">Get BILL</string>
 
     <string name="home">Home</string>
-    <string name="addnewbill">Add new Bill</string>
+    <string name="addnewbill">Add new bill</string>
+    <string name="removebill">Remove bill</string>
     <string name="calculate">Calculate</string>
     <string name="logout">Logout</string>
     <string name="clickMenu">activity_rob_toolbar</string>
